[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/ship_node.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Ship.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Resources/Sprites/ShipExhaust2.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node0_Filter.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node6_Filter.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node4_Filter.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node2_Filter.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node3_Filter.png" type="Texture" id=9]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node7_Filter.png" type="Texture" id=10]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node5_Filter.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/Ship_Node_Filters/Ship_Node1_Filter.png" type="Texture" id=12]
[ext_resource path="res://Scenes/ExplosionParticle.tscn" type="PackedScene" id=13]

[sub_resource type="Curve" id=1]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.340686, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.973039, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 850, 500, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 52.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 4 )
hue_variation_curve = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.00490196, 0.996622 ), 0.0, 0.161568, 0, 0, Vector2( 1, 0 ), -3.33875, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.1
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
angular_velocity = 52.91
angular_velocity_random = 0.41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -20.0
radial_accel = 30.0
scale_curve = SubResource( 7 )
color = Color( 0.905882, 0, 1, 1 )
hue_variation = 0.24
hue_variation_random = 0.41

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.994369 ), 0.0, 0.0, 0, 0, Vector2( 0.95098, 0 ), -1.68162, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 35, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
radial_accel = -20.0
scale = 2.0
scale_curve = SubResource( 10 )
color = Color( 0.00784314, 0.815686, 0.976471, 1 )
hue_variation = 0.06
hue_variation_random = 0.56

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( -18.237, -28.0141, -5.18174, -27.8752, -3.93177, -25.9308, -0.112411, -25.9308, 2.04031, -29.2641, 13.0123, -28.9863, 16.8316, -26.0002, 16.0561, 0.819416, 22.006, 1.92125, 22.006, 20.1014, 15.9776, 22.0062, 15.9403, 31.0636, 0.97014, 32.0116, -3.9534, 27.9981, -12.8279, 27.9496, -21.9587, 19.9231 )

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="ShipComponents" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="ShipComponents"]
z_index = -2

[node name="ColorRect" type="ColorRect" parent="ShipComponents/Background"]
margin_left = -946.08
margin_top = -537.275
margin_right = 973.92
margin_bottom = 542.725
mouse_filter = 2
color = Color( 0, 0, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Starfield" type="Particles2D" parent="ShipComponents/Background"]
amount = 128
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="ShipImage" type="Sprite" parent="ShipComponents"]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShipParts" type="Node2D" parent="ShipComponents"]

[node name="Node0" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node0"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( -9.96164, -17.7801 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node0"]
visible = false
position = Vector2( -129.09, -95.4083 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 111.003, 68.5764, 124.071, 68.5764, 124.02, 69.5463, 125.041, 69.5974, 125.041, 76.4376, 128.002, 76.4376, 128.053, 88.5357, 111.973, 88.5357, 111.973, 87.6169, 111.106, 87.6169, 111.106, 86.596, 110.085, 86.596, 110.085, 69.4953, 111.055, 69.4953 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node1" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node1"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( 7.96651, -18.0879 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node1"]
visible = false
position = Vector2( -110.366, -95.4083 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 111.401, 68.1798, 125.365, 68.249, 125.307, 69.2193, 126.381, 69.2193, 126.381, 70.1895, 127.34, 70.2189, 127.31, 75.3054, 126.352, 75.3054, 126.352, 76.3345, 125.423, 76.3639, 125.336, 80.3625, 126.352, 80.4213, 126.467, 88.4286, 109.374, 88.5085, 109.278, 70.33, 110.468, 70.2323, 110.404, 69.2549, 111.337, 69.2549 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node2" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node2"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( 8.56562, -1.93285 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node2"]
visible = false
position = Vector2( -110.293, -75.295 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 111.324, 68.0429, 126.317, 68.0692, 126.247, 77.265, 127.195, 77.265, 127.207, 80.559, 111.351, 80.4333 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node3" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node3"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( -7.76871, -1.91793 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node3"]
visible = false
position = Vector2( -126.387, -75.0843 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 111.324, 68.0429, 127.433, 68.0042, 127.358, 80.1313, 110.39, 80.0915, 110.349, 76.0496, 111.43, 76.0918 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node4" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node4"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( -8.46087, 9.93602 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node4"]
visible = false
position = Vector2( -127.68, -63.052 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 111.554, 68.831, 111.641, 67.9447, 127.433, 68.0042, 127.358, 80.1313, 111.685, 80.0435, 111.772, 78.9356, 110.678, 78.9356, 110.766, 68.9197 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node5" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node5"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( 8.12204, 9.94597 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node5"]
visible = false
position = Vector2( -110.412, -62.9335 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 110.291, 67.8889, 127.433, 68.0042, 127.275, 78.8482, 126.447, 78.9024, 126.446, 79.9281, 110.172, 79.9681 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node6" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node6"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( 8.06507, 24.042 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node6"]
visible = false
position = Vector2( -112.394, -51.0952 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 113.454, 68.0114, 127.433, 68.0042, 127.479, 74.0511, 128.392, 73.9967, 128.285, 83.2466, 127.264, 83.2466, 127.371, 84.1171, 113.454, 84.0627, 113.511, 83.0934, 112.541, 83.0833, 112.487, 73.9967, 113.562, 73.9967 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node7" type="Area2D" parent="ShipComponents/ShipParts"]
script = ExtResource( 1 )

[node name="Health_Filter" type="Sprite" parent="ShipComponents/ShipParts/Node7"]
modulate = Color( 0, 1, 0, 0.196078 )
light_mask = 2
position = Vector2( -8.4924, 21.8051 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/ShipParts/Node7"]
visible = false
position = Vector2( -128.365, -51.1743 )
scale = Vector2( 1, 0.987545 )
polygon = PoolVector2Array( 112.454, 67.9707, 127.433, 68.0042, 127.424, 72.9704, 126.318, 72.9304, 126.358, 76.0102, 124.304, 76.0502, 124.422, 80.0899, 115.456, 80.2099, 115.456, 76.0902, 113.481, 76.1302, 113.323, 73.0904, 112.414, 73.0104 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="ShipComponents"]
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="EngineParticles" type="Node2D" parent="ShipComponents"]

[node name="Particles2D" type="Particles2D" parent="ShipComponents/EngineParticles"]
position = Vector2( -8.13149, 29.339 )
amount = 128
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="ShipComponents/EngineParticles"]
position = Vector2( 7.96603, 30.3227 )
amount = 128
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="TractorBeam" type="Area2D" parent="ShipComponents"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShipComponents/TractorBeam"]
position = Vector2( -0.216578, 2.20744 )
scale = Vector2( 1, 1.07088 )
polygon = PoolVector2Array( 13.2644, -29.2896, 3.03353, -29.0507, -34.2418, -113.2, -2.05524, -122.763, 18.4271, -122.763, 50.126, -113.655 )

[node name="TractorPoint" type="Node2D" parent="ShipComponents"]
position = Vector2( 7.79102, -24.9924 )

[node name="TractorParticles" type="Particles2D" parent="ShipComponents"]
position = Vector2( 8.40851, -115.319 )
amount = 32
process_material = SubResource( 11 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="ShipComponents"]
position = Vector2( -0.0460682, 0 )
occluder = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExplosionParticle" parent="." instance=ExtResource( 13 )]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node0" to="ShipComponents/ShipParts/Node0" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node1" to="ShipComponents/ShipParts/Node1" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node2" to="ShipComponents/ShipParts/Node2" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node3" to="ShipComponents/ShipParts/Node3" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node4" to="ShipComponents/ShipParts/Node4" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node5" to="ShipComponents/ShipParts/Node5" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node6" to="ShipComponents/ShipParts/Node6" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/ShipParts/Node7" to="ShipComponents/ShipParts/Node7" method="_on_Node_area_entered"]
[connection signal="area_entered" from="ShipComponents/TractorBeam" to="." method="_on_TractorBeam_area_entered"]
[connection signal="area_exited" from="ShipComponents/TractorBeam" to="." method="_on_TractorBeam_area_exited"]
